# quantum-folk-lab

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  experiment.yml
.github/workflows/: ci.yml
apps/learning_console/: README.md  app.py
data/: README.md
dev/learning/: ARCHITECTURE.md  CONTRIBUTING-LESSONS.md  GATE-EVALUATION.md  MERMAID-POLICY.md  PUBLIC-RELEASE-SCOPE.md  RELEASE-GATES.md
docs/: architecture.md  ibm-quantum-setup.md  ibm_quantum_setup.md  learning-roadmap.md  mathematical_model.md  responsible_research.md  roadmap.md
docs/build-week/: ARCHITECTURE.md  BEFORE-AND-AFTER.md  CODEX-AND-GPT56-EVIDENCE.md  CODEX-CONTRIBUTION-LOG.md  DEMO-SCRIPT.md  JUDGING-GUIDE.md  KNOWN-LIMITATIONS.md  SUBMISSION-CHECKLIST.md
docs/plans/: EXP-002-maxcut-reference-plan.md  EXP-005A-current-qiskit-local-plan.md  OPENAI-BUILD-WEEK-2026-GOVERNING-PLAN.md
docs/prompts/: quantum-learning-console-dual-mode-mega-prompt.md  quantum-learning-console-portable-content-architecture-spike.md  quantum-learning-console-public-foundations-extraction-prompt.md  quantum-learning-console-v2-remediation-prompt.md
docs/reviews/: EXP-002-maxcut-reference-review.md  EXP-005A-amendment-closure-review.md  EXP-005A-implementation-review.md  EXP-005A-revised-plan-second-review.md  EXP-005A-tune-family-qubo-plan-review.md  PUBLIC-POSITIONING-PASS.md
examples/build-week/: guided-experiment-example.json
experiments/EXP-001-quantum-basics/: README.md  RESULT.md
experiments/EXP-002-maxcut-reference/: README.md  RESULT.md
experiments/EXP-003-synthetic-tune-families/: README.md
experiments/EXP-004-qubo-family-partition/: README.md
experiments/EXP-005-qaoa-simulator/: README.md
experiments/EXP-005A-tune-family-qaoa/: README.md  RESULT.md  threshold-manifest.json
learn/: README.md  glossary.yaml  registry.yaml
notebooks/: 01_qubits_and_measurement.ipynb  02_bell_state.ipynb  03_maxcut_reference.ipynb  04_tune_family_qaoa.ipynb  README.md
results/: README.md
scripts/: build_exp009a_r2_fable_package.py  build_exp010a_hardware_package.py  build_exp010b_protocol_evidence.py  build_exp010d_plan.py  build_exp011_plan.py  check_public_safety.py  run_exact_baseline.py  run_exp009a_exact.py  run_exp009a_r1_exact.py  run_exp009a_r2_exact.py  run_exp009a_r2_qaoa.py  run_exp010a_exact.py  run_exp010a_qaoa.py  run_exp010c_preflight.py  run_exp010d_preflight.py  run_exp011_preflight.py  verify_build_week_release.py
tests/: test_evaluation.py  test_exact_solver.py  test_exp001_qiskit_basics.py  test_exp002_maxcut_exact.py  test_exp002_qiskit_maxcut.py  test_exp005a_tune_family_exact.py  test_exp005a_tune_family_qiskit.py  test_exp007_ibm_hardware.py  test_exp008b_research_selection.py  test_exp009a_r1_parser.py  test_exp009a_r2_evidence.py  test_exp009a_r2_fable_evidence.py  test_exp009a_r2_parser.py  test_exp009a_r2_qaoa_evidence.py  test_exp009a_real_data_quantum.py  test_exp010a_compact_encoding.py  test_exp010a_hardware_package.py  test_exp010a_qaoa_evidence.py  test_exp010b_hardware_protocol.py  test_exp010c_preflight.py  test_exp010d_layout.py  test_exp010d_plan.py  test_exp010d_preflight.py  test_exp010d_receipt.py  test_exp010d_submission.py  test_exp011_analysis.py  test_exp011_plan.py  test_exp011_preflight.py  test_exp011_result.py  test_exp011_submission.py  test_no_secrets.py  test_qaoa_smoke.py  test_quantum_basics_registry.py  test_qubo_energy.py  test_similarity.py  test_synthetic.py
(+209 files in other folders)
