[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-folk-lab"
version = "0.1.0"
description = "Learning and research sandbox for QUBO/QAOA experiments on synthetic symbolic music sequences."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Gwri Pennar"}]
dependencies = []
keywords = ["quantum-computing", "qaoa", "qubo", "symbolic-music", "python"]

[project.optional-dependencies]
quantum = ["qiskit>=2.4,<3", "qiskit-aer>=0.17,<0.18"]
ibm = ["qiskit-ibm-runtime>=0.23"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
qfl = "quantum_folk_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
  "quantum: tests requiring optional local Qiskit/Aer dependencies",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
